examples/test/testpolicy16849.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16849
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key21: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value13
          key37: value20
      podSelector:
        matchLabels:
          key1: value2
          key38: value6
